<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="heading_setting">Настройки</string>
    <string name="heading_search">Поиск</string>
    <string name="heading_media">Медиатека</string>
    <string name="heading_dark_theme">Темная тема</string>
    <string name="heading_link">Поделиться приложением</string>
    <string name="heading_help">Написать в поддержку</string>
    <string name="heading_user_agreement">Пользовательское соглашение</string>
    <string name="message_not_yet_implemented">Простите, еще работаем над этим.</string>
    <string name="developer_email">sysoyev.and@gmail.com</string>
    <string name="subject_help">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_help">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="url_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="data_mail">mailto:</string>
    <string name="type_message">application/octet-stream</string>
    <string name="title_message">share to:</string>
    <string name="title_mail">send to:</string>
    <string name="network_error_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="client_error_text">Что-то пошло не так</string>
    <string name="update_text">Обновить</string>
    <string name="empty_text">Ничего не нашлось</string>
    <string name="clear_history_text">Очистить историю</string>
    <string name="search_history_header">Вы искали</string>
    <string name="length_title">Длительность</string>
    <string name="year_title">Год</string>
    <string name="collection_title">Альбом</string>
    <string name="genre_title">Жанр</string>
    <string name="country_title">Страна</string>
    <string name="unavailable_track_text">Ошибка. Трек недоступен</string>
    <string name="favorite_tab_text">Избранные треки</string>
    <string name="playlist_tab_text">Плейлисты</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="empty_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="empty_media">Ваша медиатека пуста</string>


</resources>