<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/medium_padding"
    tools:context=".search.ui.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:text="@string/heading_search"
            android:textColor="?attr/colorOnSecondary" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_padding"
        android:background="@drawable/round_rectangle">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableTint="?attr/colorSecondaryVariant"
            android:fontFamily="@font/ys_text_regular"
            android:hint="@string/heading_search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingVertical="@dimen/icon_padding"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/Xlarge_padding"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorSecondaryVariant"
            android:textFontWeight="400"
            android:textSize="@dimen/large_text_size"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/small_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/clear_icon"
            android:visibility="gone"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:visibility="gone">


    </ProgressBar>

    <FrameLayout
        android:id="@+id/placeholder_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/placeholder_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:ignore="ContentDescription" />


            <TextView
                android:id="@+id/placeholder_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center_horizontal"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/large_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="24dp"
                android:backgroundTint="?attr/colorOnSecondary"
                android:fontFamily="@font/ys_text_medium"
                android:insetBottom="0dp"
                android:text="@string/update_text"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                android:textFontWeight="@integer/text_font_weight"
                app:cornerRadius="54dp" />

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/search_history_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/search_history_header"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/large_text_size"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks_recycler_view"
        style="@style/TracksList"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="24dp"
        android:backgroundTint="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_text_medium"
        android:insetBottom="0dp"
        android:text="@string/clear_history_text"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="@integer/text_font_weight"
        android:visibility="gone"
        app:cornerRadius="54dp" />
</LinearLayout>