<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:paddingHorizontal="@dimen/medium_padding"
    android:paddingTop="@dimen/medium_padding"
    android:paddingBottom="20dp"
    tools:context=".activity.PlayerActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_padding"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toTopOf="@id/poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/icon_padding"
        android:layout_marginBottom="24dp"
        android:scaleType="fitEnd"
        android:src="@drawable/placeholder"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/track_name_value"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/track_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/icon_padding"
        android:layout_marginBottom="@dimen/small_padding"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/headers_text_size"
        app:layout_constraintBottom_toTopOf="@id/group_name_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/poster"
        tools:text="The track" />

    <TextView
        android:id="@+id/group_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/icon_padding"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/track_name_value"
        tools:text="The group" />

    <FrameLayout
        android:id="@+id/button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/current_time"
        app:layout_constraintTop_toBottomOf="@id/group_name_value">

        <ImageView
            android:id="@+id/add_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginHorizontal="@dimen/icon_padding"
            android:src="@drawable/add_media_icon"
            app:layout_constraintEnd_toStartOf="@id/play"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/play_icon"
            app:layout_constraintBottom_toTopOf="@id/current_time"
            app:layout_constraintEnd_toStartOf="@id/like"
            app:layout_constraintStart_toEndOf="@id/add_media" />


        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginHorizontal="@dimen/icon_padding"
            android:src="@drawable/like_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/play" />

    </FrameLayout>

    <TextView
        android:id="@+id/current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="00:00"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/track_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_panel" />

    <TextView
        android:id="@+id/track_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/icon_padding"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/length_title"
        android:textColor="@color/grey"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/collection_name"
        app:layout_constraintEnd_toStartOf="@id/track_time_value"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_time"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/track_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="@id/track_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/track_time"
        app:layout_constraintTop_toTopOf="@id/track_time"
        tools:text="Длительность" />

    <TextView
        android:id="@+id/collection_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/icon_padding"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/collection_title"
        android:textColor="@color/grey"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toStartOf="@id/collection_name_value"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/track_time" />

    <TextView
        android:id="@+id/collection_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="@id/collection_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/collection_name"
        app:layout_constraintTop_toTopOf="@id/collection_name"
        tools:text="Альбом" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/icon_padding"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/year_title"
        android:textColor="@color/grey"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintEnd_toStartOf="@id/year_value"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collection_name" />

    <TextView
        android:id="@+id/year_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="@id/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/year"
        app:layout_constraintTop_toTopOf="@id/year"
        tools:text="Год" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/icon_padding"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/genre_title"
        android:textColor="@color/grey"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintEnd_toStartOf="@id/genre_value"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/genre_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="@id/genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/genre"
        app:layout_constraintTop_toTopOf="@id/genre"
        tools:text="Жанр" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/icon_padding"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/country_title"
        android:textColor="@color/grey"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/country_value"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/country_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="@integer/text_font_weight"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="@id/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/country"
        app:layout_constraintTop_toTopOf="@id/country"
        tools:text="Страна" />


</androidx.constraintlayout.widget.ConstraintLayout>